# forf-uas-client

./: .gitignore  README.md  pyproject.toml
src/forf_uas_client/: client.py  parsers.py  run.py  uav.py  utils.py
src/forf_uas_client/models/: UAVStatus.py
tests/: test_uav.py
